complete admin test1

--- a/views/admin/restaurants.hbs
+++ b/views/admin/restaurants.hbs
@@ -1,8 +1,8 @@
-<h1>餐廳後台</h1>
+{{> backsidebar}}
 <a href='/admin/restaurants/create'>
-  <button type="button" class="btn btn-primary">New Restaurant</button>
+  <button type="button" class="btn btn-primary mt-5" style="display: block;">New Restaurant</button>
 </a>
-<br />
+
 <br />
 <table class="table align-middle">
   <thead class="thead-dark">
