--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -1,5 +1,13 @@
-{{> backsidebar}}
+<h1>餐廳後台</h1>
 
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page" href="/admin/restaurants">Restaurants</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="/admin/users">Users</a>
+  </li>
+</ul>
 
 <br />
 <br />
