--- a/views/user/user.hbs
+++ b/views/user/user.hbs
@@ -14,3 +14,12 @@
     </div>
   </div>
 </div>
+
+<div class="card">
+  <div class="card-header">以評論餐廳</div>
+  <div class="card-body">
+    <blockquote class="blockquote mb-0">
+      <p>評論...</p>
+    </blockquote>
+  </div>
+</div>
